--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,13 @@ on:
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: backend  # change if your pom.xml lives elsewhere
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,7 +24,12 @@ jobs:
           java-version: 23
           cache: maven
 
+      - name: Verify project structure
+        run: ls -1
+
       - name: Build with Maven
         run: mvn -B clean install
-        # If backend is in a subfolder, uncomment and set:
-        # working-directory: backend
+
+      # If you prefer not to use defaults, replace the above step with:
+      # - name: Build with Maven
+      #   run: mvn -B -f backend/pom.xml clean install
