--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # === Database Connection (Supabase PostgreSQL) ===
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
 spring.datasource.username=postgres.hpgawptoeiwdajfrqvvz
-spring.datasource.password=sbp_e665434669349d9861bef651291ea0cc77790786
+spring.datasource.password=bK47WdtQ2Q810bdz
 
 # === JPA / Hibernate Settings ===
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Supabase needs SSL
+spring.datasource.hikari.data-source-properties.sslmode=require
