--- a/src/.github/workflows/ci.yml
+++ b/src/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: Backend CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, phase* ]
 
 defaults:
   run:
