--- a/src/backend/pom.xml
+++ b/src/backend/pom.xml
@@ -133,7 +133,22 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
+            <!-- Spotless: enforce/format Java code using google-java-format -->
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.40.0</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat>
+                            <version>1.17.0</version>
+                        </googleJavaFormat>
+                        <target>src/main/java/**/*.java,src/test/java/**/*.java</target>
+                    </java>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
