--- a/src/backend/pom.xml
+++ b/src/backend/pom.xml
@@ -13,6 +13,8 @@
         <maven.compiler.target>23</maven.compiler.target>
         <spring-boot.version>3.3.5</spring-boot.version>
         <java.version>23</java.version>
+        <!-- Lombok version property so annotationProcessorPaths can reference it -->
+        <lombok.version>1.18.34</lombok.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -85,11 +87,10 @@
             <version>42.7.3</version>
         </dependency>
         
-        <!-- H2 Database (for testing) -->
+        <!-- H2 Database (for testing only) -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
         </dependency>
         
         <!-- Spring Boot Starter Test -->
@@ -105,12 +106,6 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         
-        <!-- To parse Json-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.17.2</version>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -131,7 +126,22 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
+            <!-- Spotless: enforce/format Java code using google-java-format -->
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.40.0</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat>
+                            <version>1.17.0</version>
+                        </googleJavaFormat>
+                        <target>src/main/java/**/*.java,src/test/java/**/*.java</target>
+                    </java>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -140,6 +150,14 @@
                     <source>23</source>
                     <target>23</target>
                     <release>23</release>
+                    <!-- Enable annotation processing for Lombok -->
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
