--- a/src/backend/src/main/resources/application-dev.yml
+++ b/src/backend/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 # Development Environment Configuration
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/ridewithus_dev
-    username: postgres
-    password: password
+  # datasource:
+  #   url: jdbc:postgresql://localhost:5432/ridewithus_dev
+  #   username: postgres
+  #   password: password
     
   jpa:
     hibernate:
