removed password hashing

--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-# === Database Connection (H2 for testing) ===
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+# === Database Connection (Supabase PostgreSQL) ===
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.hpgawptoeiwdajfrqvvz
+spring.datasource.password=bK47WdtQ2Q810bdz
 
 # === JPA / Hibernate Settings ===
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Supabase needs SSL
+spring.datasource.hikari.data-source-properties.sslmode=require
